# skinshimmer

./: .dockerignore  .gitignore  Dockerfile  fly.toml  pyproject.toml  wsgi.py
.github/workflows/: containerize.yml  deploy.yml
db/: Dockerfile  fly.toml
scripts/: conf_editor.sh
this/: app.py  auth.py  blog.py  db.py  inline_uploads.py  metadata.py  moved.py  redirects.py  requirements.txt  uploads.py  verify.py
this/static/: ads.txt  sitemap.xml
this/static/js/: firstLoad.js  nav.js  paginator.js  script.js  share.js  temp.js
this/static/styles/: buttons.css  content.css  editor.css  footer.css  getpost.css  inputs.css  login.css  nav.css  nav_mini.css  paginator.css  style.css  style_2.css  style_4.css  write.css
this/templates/: author.html  cookies.html  footer.html  get_post.html  head.html  index.html  login.html  nav.html  paginator.html  post.html  privacy.html  share.html  update.html  write.html
