[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[project]
name = "this"
description = "skincare blog"
version = "1.0.0"
dependencies = ["flask==3.0.0", "mysqlclient", "SQLAlchemy==2.0.23", "python-dotenv==1.0.0", "pyotp==2.9.0", "boto3==1.34.0", "pillow==10.2.0"]
requires-python = ">= 3.8"
